--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,8 @@
 version: 2.1
+executors:
+  node:
+    docker:
+      - image: cimg/node:18.14.1
 jobs:
   check-whitespace:
     docker:
@@ -36,6 +40,17 @@ jobs:
           key: resources-gen-v{{ .Environment.RESOURCES_CACHE_VERSION }}
           paths:
             - resources
+  prettier:
+    executor: node
+    resource_class: small
+    steps:
+      - checkout
+      - run:
+          name: Install npm dependencies
+          command: npm ci
+      - run:
+          name: Check code formatting with prettier
+          command: npx prettier --check .
   check_html:
     docker:
       - image: wjdp/htmltest:v0.17.0
@@ -82,6 +97,7 @@ workflows:
   test-deploy:
     jobs:
       - check-whitespace
+      - prettier
       - build
       - check_html:
           requires:
@@ -95,6 +111,7 @@ workflows:
       - deploy:
           requires:
             - check-whitespace
+            - prettier
             - build
             - check_html
           filters:
