Auto-pull github activity

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@ config-preview.toml
 .netlify/state.json
 node_modules/
 whatgotdone-*.zip
+
+# Environment variables, which may contain secrets
+.env.*
+# .env.example is an exception as it only contains dummy secrets.
+!.env.example
