--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 executors:
   node:
     docker:
-      - image: cimg/node:18.14.1
+      - image: cimg/node:24.4.1
 jobs:
   check_whitespace:
     docker:
@@ -102,8 +102,7 @@ jobs:
           name: Run htmltest
           command: htmltest
   publish_draft:
-    docker:
-      - image: cimg/node:18.14.1
+    executor: node
     resource_class: small
     steps:
       - attach_workspace:
@@ -120,8 +119,7 @@ jobs:
           name: Deploy a live draft
           command: ./node_modules/.bin/netlify deploy --dir=public --site="${NETLIFY_SITE_ID}"
   deploy:
-    docker:
-      - image: cimg/node:18.14.1
+    executor: node
     resource_class: small
     steps:
       - attach_workspace:
